# top-learning-generator

./: .gitignore  .gitmodules  LICENSE  README.md
clang-parsing/: github-repo-searcher.linq  runner.linq  test-clang.sln
clang-parsing/test-clang/: CMakeLists.txt  ControlFlowConcept.h  ControlFlowCycleComplexity.h  ControlFlowDomainNodes.cpp  ControlFlowDomainNodes.h  ControlFlowDomainRdfNodes.h  ExpressionDomainNodes.h  Logger.h  cntrl-flow-domain-funtions.cpp  cntrl-flow-domain-funtions.h  expression-domain-functions.cpp  expression-domain-functions.h  helpers.cpp  helpers.h  main.cpp  test-clang.cpp  test-clang.vcxproj  test-clang.vcxproj.filters
rdf_service_tasks/ctrl_flow_tools/: crop_png.py  html2img.py  requirements.txt  ttl2rdf.py
rdf_service_tasks/decision_tree_tools/: copy_ttl.py  fix_tree_xml.py
rdf_service_tasks/question_gen/: GraphRole.py  NamespaceUtil.py  RemoteFileService.py  access_urls.yml  analyze_alg.py  automatic-pipeline.bat  chain_utils.py  fix_alg_names.py  full_questions.py  ns4guestions.py  q_generator_main.py  rdf2alg_json.py  rdf_patch_strings.py  rdflib_utils.py  requirements.txt  run_q_generator_main.bat  service.py  sparql_wrapper.py  sqlite2mysql_ddl.txt  (+1 more)
test-clang/: ControlFlowDomainNodes.h  ControlFlowDomainRdfNodes.h  ExpressionDomainNodes.h  ExpressionDomainRdfNode.h  cntrl-flow-domain-funtions.cpp  cntrl-flow-domain-funtions.h  example.cpp  expression-domain-functions.cpp  expression-domain-functions.h  helpers.cpp  helpers.h  test-clang.cpp  test-clang.vcxproj  test-clang.vcxproj.filters
tool/: pom.xml
(+22 files in other folders)
